# zag

./: .editorconfig  .gitignore  AGENTS.md  AGENT_EXPLORATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
agent-lib/: Cargo.toml
agent-lib/prompts/json-wrap/: 1_0.md
agent-lib/src/: agent_tests.rs  auto_selector.rs  builder.rs  config.rs  config_tests.rs  factory.rs  lib.rs  process_tests.rs  progress.rs  session.rs  session_log.rs  session_log_tests.rs  skills.rs  skills_tests.rs  worktree.rs
agent-lib/src/providers/: codex.rs  copilot.rs  copilot_tests.rs  gemini.rs
agent-lib/src/providers/claude/: logs.rs  mod.rs
bindings/: README.md
bindings/python/: README.md  REFERENCE.md  pyproject.toml
bindings/python/src/zag/: __init__.py  builder.py  capability_check.py  discover.py  process.py  types.py  version.py
bindings/python/tests/: test_builder.py  test_capability.py  test_discover.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: lib.rs
docs/: configuration.md  events-and-logging.md  exit-mode.md  getting-started.md  index.html  isolation.md  language-bindings.md  orchestration.md  providers.md  remote-access.md  sessions.md  skills-and-mcp.md  troubleshooting.md  (+1 more)
zag-agent/: Cargo.toml  README.md
zag-agent/man/: cancel.md  config.md  connect.md  discover.md  exec.md  help-agent.md  input.md  listen.md  log.md  man.md  orchestration.md  pipe.md  plan.md  ps.md  run.md  serve.md  session.md  skills.md  subscribe.md  summary.md  usage.md  zag.md
zag-agent/prompts/auto-selector/: 2_0.md  3_0.md  3_1.md
zag-agent/prompts/plan/: 1_0.md
zag-agent/src/: agent.rs  agent_tests.rs  attachment.rs  attachment_tests.rs  auto_selector.rs  auto_selector_tests.rs  builder.rs  builder_tests.rs  capability.rs  capability_tests.rs  config.rs  config_tests.rs  exit_mode.rs  exit_mode_tests.rs  factory.rs  factory_tests.rs  file_util.rs  file_util_tests.rs  headless_pty.rs  headless_pty_tests.rs  json_validation.rs  lib.rs  listen.rs  listen_tests.rs  manpages.rs  manpages_tests.rs  mcp.rs  mcp_tests.rs  mock_integration_tests.rs  output.rs  output_tests.rs  plan.rs  plan_tests.rs  preflight.rs  preflight_tests.rs  process.rs  process_registration.rs  process_registration_tests.rs  process_store.rs  process_store_tests.rs  (+23 more)
zag-agent/src/providers/: codex.rs  codex_tests.rs  codex_usage_limits.rs  codex_usage_limits_tests.rs  common.rs  common_tests.rs  copilot.rs  copilot_tests.rs  copilot_usage_limits.rs  copilot_usage_limits_tests.rs  gemini.rs  gemini_tests.rs  gemini_usage_limits.rs  gemini_usage_limits_tests.rs  mock.rs  mock_tests.rs  mod.rs  ollama.rs  ollama_tests.rs
zag-agent/src/providers/claude/: claude_tests.rs  logs.rs  logs_tests.rs  mod.rs  models.rs  models_tests.rs  usage_limits.rs  usage_limits_tests.rs
zag-cli/: Cargo.toml
zag-cli/man/: broadcast.md  collect.md  config.md  connect.md  env.md  exec.md  gc.md  help-agent.md  output.md  pipe.md  plan.md  review.md  run.md  search.md  serve.md  spawn.md  user.md  wait.md  zag.md
zag-cli/src/: cleanup.rs  cli.rs  commands.rs  json_mode.rs  json_mode_tests.rs  logging.rs  main.rs  main_tests.rs  manpage.rs  manpage_tests.rs  output.rs  output_tests.rs  resume.rs  session_log.rs  session_log_tests.rs  session_setup.rs  session_setup_tests.rs
zag-cli/src/claude/: README.md
zag-cli/src/commands/: agent_action.rs  broadcast.rs  broadcast_tests.rs  capability.rs  capability_tests.rs  config.rs  connect.rs  connect_tests.rs  discover.rs  discover_tests.rs  input.rs  input_tests.rs  manpage.rs  manpage_tests.rs  mcp.rs  mod.rs  plan.rs  plan_tests.rs  proxy.rs  proxy_tests.rs  relay.rs  relay_tests.rs  review.rs  serve.rs  session.rs  skills.rs
zag-cli/src/commands/mcp/: add.rs  import.rs  list.rs  mod.rs  remove.rs  show.rs  sync.rs
zag-cli/src/commands/session/: delete.rs  import.rs  list.rs  mod.rs  show.rs  update.rs
zag-cli/src/commands/skills/: add.rs  import.rs  list.rs  mod.rs  remove.rs  show.rs  sync.rs
zag-cli/src/commands/usage/: cancel.rs  list.rs  mod.rs
zag-cli/src/commands/user/: add.rs  list.rs  mod.rs  passwd.rs  remove.rs
zag-lib/: Cargo.toml  README.md
zag-lib/src/: agent.rs  agent_tests.rs  builder.rs  builder_tests.rs  capability.rs  capability_tests.rs  config.rs  config_tests.rs  factory.rs  factory_tests.rs  file_util.rs  file_util_tests.rs  json_validation.rs  lib.rs  mcp.rs  output.rs  output_tests.rs  preflight.rs  process.rs  process_store.rs  process_store_tests.rs  search.rs  search_tests.rs  session.rs  session_log.rs  session_log_tests.rs  session_tests.rs  skills.rs  skills_tests.rs  streaming.rs  streaming_tests.rs  worktree_tests.rs
zag-lib/src/providers/: codex.rs  codex_tests.rs  copilot.rs  gemini.rs  gemini_tests.rs  mod.rs  ollama.rs  ollama_tests.rs
zag-lib/src/providers/claude/: claude_tests.rs  logs.rs  mod.rs  models.rs  models_tests.rs
zag-orch/: Cargo.toml  README.md
zag-orch/src/: cancel.rs  cancel_tests.rs  collect.rs  duration.rs  duration_tests.rs  env.rs  events.rs  gc.rs  gc_tests.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  listen.rs  listen_tests.rs  log_cmd.rs  messaging.rs  messaging_tests.rs  output_cmd.rs  output_cmd_tests.rs  pipe.rs  pipe_tests.rs  ps.rs  ps_tests.rs  retry.rs  retry_tests.rs  search.rs  spawn.rs  spawn_tests.rs  status.rs  subscribe.rs  subscribe_tests.rs  summary.rs  summary_tests.rs  types.rs  usage_resume.rs  usage_resume_store.rs  usage_resume_store_tests.rs  usage_resume_tests.rs  util.rs  util_tests.rs  (+5 more)
zag-serve/: Cargo.toml
zag-serve/src/: auth.rs  auth_tests.rs  config.rs  config_tests.rs  lib.rs  middleware.rs  router.rs  session_token.rs  session_token_tests.rs  types.rs  user.rs  user_tests.rs
zag-serve/src/handlers/: auth_handler.rs  capability.rs  config.rs  health.rs  mcp.rs  mod.rs  orchestration.rs  processes.rs  sessions.rs  skills.rs  user_handler.rs
zag-serve/src/ws/: mod.rs  stream.rs  subscribe.rs
(+983 files in other folders)
