[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "agent-lib"]

[dependencies]
agent-lib = { path = "agent-lib" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
dirs = "5"
jsonschema = "0.29"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
