[package]
name = "agent-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
log = "0.4"
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
