[package]
name = "zag-agent"
version = "0.12.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/niclaslindstedt/zag"
homepage = "https://github.com/niclaslindstedt/zag"
description = "Core library for zag — a unified interface for AI coding agents"
readme = "README.md"
keywords = ["ai", "agent", "cli", "llm", "coding"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "process", "io-util", "fs"] }
log = "0.4"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
jsonschema = "0.29"
nix = { version = "0.29", features = ["signal", "process"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
