[package]
name = "zag-cli"
version = "0.18.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/niclaslindstedt/zag"
homepage = "https://github.com/niclaslindstedt/zag"
description = "A unified CLI for AI coding agents — Claude, Codex, Gemini, Copilot, and Ollama"
readme = "../README.md"
keywords = ["ai", "agent", "cli", "llm", "coding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zag"
path = "src/main.rs"

[dependencies]
zag-agent = { version = "0.18.0", path = "../zag-agent" }
zag-orch = { version = "0.18.0", path = "../zag-orch" }
zag-serve = { version = "0.18.0", path = "../zag-serve" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
rpassword = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
