[package]
name = "zag-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core library for zag — a unified CLI for AI coding agents"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "process", "io-util", "fs"] }
log = "0.4"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
jsonschema = "0.29"
nix = { version = "0.29", features = ["signal", "process"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
