[package]
name = "zag-orch"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/niclaslindstedt/zag"
homepage = "https://github.com/niclaslindstedt/zag"
description = "Orchestration library for zag — multi-session coordination for AI coding agents"
keywords = ["ai", "agent", "orchestration", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
zag = { version = "0.1.0", path = "../zag-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
uuid = { version = "1", features = ["v4"] }
termimad = "0.34"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
