[package]
name = "zag-serve"
version = "0.14.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/niclaslindstedt/zag"
homepage = "https://github.com/niclaslindstedt/zag"
description = "Network server for zag — remote access to AI agent orchestration"
keywords = ["ai", "agent", "server", "remote"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
zag-agent = { version = "0.14.1", path = "../zag-agent" }
zag-orch = { version = "0.14.1", path = "../zag-orch" }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rcgen = "0.13"
rand = "0.9"
hex = "0.4"
bcrypt = "0.17"
toml = "0.8"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
