[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zag-agent"
version = "0.6.0"
description = "Python SDK for zag — a unified CLI for AI coding agents"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["zag", "ai", "agent", "claude", "codex", "gemini", "copilot", "ollama"]
authors = [
    { name = "Niclas Lindstedt" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/niclaslindstedt/zag"
Repository = "https://github.com/niclaslindstedt/zag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
