[package]
name = "zag"
version = "0.14.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/niclaslindstedt/zag"
homepage = "https://github.com/niclaslindstedt/zag"
description = "A unified Rust interface for AI coding agents — re-exports zag-agent and zag-orch"
readme = "README.md"
keywords = ["ai", "agent", "cli", "llm", "coding"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
zag-agent = { version = "0.14.1", path = "../../zag-agent" }
zag-orch = { version = "0.14.1", path = "../../zag-orch" }
zag-serve = { version = "0.14.1", path = "../../zag-serve" }
